# VortexArcana

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
assets/: ball_proto.aseprite  terrain.aseprite
assets/shaders/: GaussianFragment.glsl  GaussianVertex.glsl  OcclusionFragment.glsl  OcclusionVertex.glsl  TexFragment.glsl  TexVertex.glsl  basicFragment.frag  basicFragment.glsl  basicVertex.glsl  basicVertex.vert  compositionFragment.glsl  compositionVertex.glsl  lightFragment.glsl  lightTestFragment.glsl  pointLightFragment.glsl  pointLightFragmentAlternate.glsl  pointLightVertex.glsl  singleColorFragment.glsl
src/: main.cpp
src/Core/: Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Math.h  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Textures.cpp  Textures.h
src/Core/CSharp/: BaseEntity.cs  ScriptHandler.cs  ScriptHandler.csproj  ScriptHandler.sln  ScriptHost.cs  SharedInterface.cs
src/Core/CSharp/DebugScripts/: DihScript.cs  SonionScript.cs
src/Core/Components/: Physics2D.cpp  Physics2D.h  PointLight.cpp  PointLight.h  Rigidbody.cpp  Rigidbody.h  SpriteRenderer.cpp  SpriteRenderer.h  SpriteRenderer2D.cpp  SpriteRenderer2D.h
src/Core/Entities/: Tile.h
src/Core/Utility/: Collisions.h  Math.h  SceneUtility.cpp  SceneUtility.h  ScriptingInterface.h  Shader.h  Textures.cpp  Textures.h
